k8s/argo-server-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: argo-server
  annotations:
    networking.gke.io/managed-certificates: argo
spec:
  backend:
    serviceName: argo-server
    servicePort: 2746
